Particle background no longer blocks scrollbar

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,11 +1,12 @@
-body, html {
+body,
+html {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     /* overflow-y: initial; */
     margin: 0;
     padding: 0;
-    background-color: var(--black-color);
+    /* background-color: var(--black-color); */
 }
 
 #root {
@@ -30,6 +31,7 @@ body, html {
     width: 100%;
     position: absolute;
     pointer-events: none;
+    z-index: -1;
 }
 
 .page {
